# budget-app

./: .gitignore  README.md  docker-compose.yml  setup_database.sh  test_db_connection.sh
backend/: Cargo.toml  Dockerfile  build.sh  generate_cache.sh  prepare.sh
backend/.sqlx/: query-1512031d3f145469fcf8b1ef43b1c06de8d29d29cef9bfe05093da43782a1b00.json  query-211d572685fbf31bc7afc39d9b92023a4f244899342b688670e7059006f32f29.json  query-32b19db3ace8f4524b25ea65620e61d2c2eefc18ed46657c534cdfc2c54fee23.json
backend/migrations/: 20240320000000_create_transactions_table.sql
backend/src/: db.rs  handlers.rs  main.rs  models.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
